# game-of-life

./: Cargo.toml  README.md
src/: life.rs  main.rs
